<resources>
    <string name="app_name">Venue Finder</string>

    <string name="venue_search_hint">Fill in a city name</string>
    <string name="venue_search_no_results">No results</string>
    <string name="venue_location_list_item">%1$s, %2$s, %3$s</string>

    <string name="venue_detail_title_unknown">No data in cache</string>
    <string name="venue_detail_description_unknown">No description available</string>
    <string name="venue_detail_address">Address:</string>
    <string name="venue_detail_address_unknown">Address unknown</string>
    <string name="venue_detail_address_format">%1$s</string>
    <string name="venue_detail_rating_title">Rating:</string>
    <string name="venue_detail_facebook">Facebook</string>
    <string name="venue_detail_facebook_prefix">https://facebook.com/%1$s</string>
    <string name="venue_detail_twitter">Twitter</string>
    <string name="venue_detail_twitter_prefix">https://twitter.com/%1$s</string>
    <string name="venue_detail_instagram">Instagram</string>
    <string name="venue_detail_instagram_prefix">https://instagram.com/%1$s</string>
    <string name="venue_detail_call">Call venue</string>
    <string name="venue_detail_call_prefix">tel:%1$s</string>
    <string name="venue_detail_image_url">%1$s%2$dx%3$d%4$s</string>
    <string name="venue_detail_connection_error">Something went wrong: Code %1$d</string>
</resources>
